# wasmverse

./: .gitignore  CLAUDE.md  Cargo.toml  LIBRARY_PLAN.md  TREATISE.md  build.sh
crates/circuit-sim/: Cargo.toml
crates/circuit-sim/src/: lib.rs
crates/compute-engine/: Cargo.toml
crates/compute-engine/src/: lib.rs
crates/euler/: Cargo.toml
crates/euler/src/: json.rs  lib.rs  perf.rs  router.rs  search.rs  store.rs  theme.rs
crates/gpu-renderer/: Cargo.toml
crates/gpu-renderer/src/: lib.rs
crates/nostr-wasm/: Cargo.toml
crates/nostr-wasm/src/: lib.rs
crates/sorting-theater/: Cargo.toml
crates/sorting-theater/src/: lib.rs
crates/stack-machine/: Cargo.toml
crates/stack-machine/src/: lib.rs
crates/wit-components/: Cargo.toml
crates/wit-components/src/: lib.rs
crates/wit-components/wit/: canvas.wit
docs/: changelog.json  community.html  euler-shell.js  generate-icons.html  index.html  lib.js  manifest.webmanifest  pwa.js  read.html  robots.txt  sitemap.xml  sw.js  version.json
docs/books/: agriculture.md  algorithms.md  android.md  bitcoin.md  canvas.md  checkers.md  chemistry.md  claude-ai.md  cloak.md  crypto.md  design.md  devops.md  django.md  earth.md  electricity.md  enterprise.md  euler.md  flutter.md  flutterwave.md  fortress.md  games.md  go.md  governance.md  health.md  heat.md  industry.md  keys.md  kubernetes.md  lightning.md  linux.md  macros.md  making.md  manifest.json  manufacturing.md  math.md  mean.md  mern.md  messages.md  momo.md  nine-scrolls.md  (+18 more)
docs/css/: base.css  community.css  library.css  portal.css  reader.css  search.css  theme-toggle.css
docs/js/: african-patterns.js  certificate.js  community.js  connect.js  idb.js  labs.js  library.js  nostr-shell.js  portal.js  qr-min.js  reader.js  search.js  theme-global.js
docs/pkg/circuit-sim/: circuit_sim.js  circuit_sim_bg.wasm
docs/pkg/euler/: euler.js  euler_bg.wasm
docs/pkg/nostr-wasm/: nostr_wasm.js  nostr_wasm_bg.wasm
docs/pkg/sorting-theater/: sorting_theater.js  sorting_theater_bg.wasm
web/: index.html
web/compute/: index.html
web/gpu/: index.html
web/wit/: index.html
(+2 files in other folders)
